[gd_scene load_steps=10 format=3 uid="uid://bmkoj1fhov2l5"]

[ext_resource type="Script" uid="uid://8h553qg3ep1a" path="res://scripts/GameBoard.gd" id="1_jw4sl"]
[ext_resource type="Resource" uid="uid://corrqqanh758t" path="res://resources/Grid.tres" id="2_5orrj"]
[ext_resource type="PackedScene" uid="uid://cepo131m7h40h" path="res://scenes/Unit.tscn" id="3_f24t2"]
[ext_resource type="PackedScene" uid="uid://btv482ldvcdg3" path="res://scenes/UnitOverlay.tscn" id="3_jhtls"]
[ext_resource type="PackedScene" uid="uid://b0vnpacouygxg" path="res://scenes/UnitPath.tscn" id="4_ir2so"]
[ext_resource type="Texture2D" uid="uid://l2lpwt61qnc2" path="res://assets/unit1.png" id="5_ck7bj"]
[ext_resource type="Texture2D" uid="uid://bu7dmvve08u20" path="res://assets/unit2.png" id="6_lrbho"]
[ext_resource type="Texture2D" uid="uid://iescceryjmac" path="res://assets/unit3.png" id="7_0ergt"]
[ext_resource type="PackedScene" uid="uid://ccp04nysy0fjj" path="res://scenes/Cursor.tscn" id="9_nhjkd"]

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_jw4sl")
grid = ExtResource("2_5orrj")

[node name="UnitOverlay" parent="." instance=ExtResource("3_jhtls")]

[node name="UnitPath" parent="." instance=ExtResource("4_ir2so")]
grid = ExtResource("2_5orrj")

[node name="Unit1" parent="." instance=ExtResource("3_f24t2")]
position = Vector2(200, 200)
grid = ExtResource("2_5orrj")
skin = ExtResource("5_ck7bj")

[node name="Unit2" parent="." instance=ExtResource("3_f24t2")]
position = Vector2(360, 200)
grid = ExtResource("2_5orrj")
skin = ExtResource("6_lrbho")

[node name="Unit3" parent="." instance=ExtResource("3_f24t2")]
position = Vector2(520, 200)
grid = ExtResource("2_5orrj")
skin = ExtResource("7_0ergt")

[node name="Cursor" parent="." instance=ExtResource("9_nhjkd")]

[connection signal="accept_pressed" from="Cursor" to="." method="_on_cursor_accept_pressed"]
[connection signal="moved" from="Cursor" to="." method="_on_cursor_moved"]
